[package]
name                    = "rust_os"
version                 = "0.1.0"
edition                 = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.bootimage]
test-args               = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04","-serial","stdio","-display","none"]
test-success-exit-code  = 33   # (0x10 << 1) | 1


[dependencies]
volatile                = "0.2.6"
bootloader              = { version = "0.9.23", features = ["map_physical_memory"]}
spin                    = "0.5.2"
x86_64                  = "0.14.2" # helps us to avoid dreadfull assembly
uart_16550              = "0.2.0" # used to send data to serial port
pic8259                 = "0.10.1"
pc-keyboard             = "0.5.0"

[dependencies.lazy_static]
version                 = "1.0"
features                = ["spin_no_std"]

[[test]]
name                    = "should_panic"
harness                 = false